[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-run"
version = "1.0.0"
description = "'docker run' and 'docker exec' with useful defaults"
readme = "README.md"
authors = [
    { name = "Lennart Reiher", email = "lennart.reiher@rwth-aachen.de" },
    { name = "Jean-Pierre Busch", email = "jean-pierre.busch@rwth-aachen.de" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["docker", "container"]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/ika-rwth-aachen/docker-run"

[tool.setuptools]
script-files = ["bin/docker-run"]
