[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-run-cli"
version = "0.10.1"
description = "'docker run' and 'docker exec' with useful defaults"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Lennart Reiher", email = "lennart.reiher@rwth-aachen.de"},
    {name = "Jean-Pierre Busch", email = "jean-pierre.busch@rwth-aachen.de"},
]
maintainers = [
    {name = "Lennart Reiher", email = "lennart.reiher@rwth-aachen.de"},
    {name = "Jean-Pierre Busch", email = "jean-pierre.busch@rwth-aachen.de"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["docker", "container"]
dependencies = ["nvidia-ml-py~=12.570.86"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["build", "twine"]
docker-ros = ["docker-run-docker-ros>=1.0.8"]
plugins = ["docker-run-docker-ros>=1.0.8"]
all = ["docker-run-docker-ros>=1.0.8", "build", "twine"]

[project.urls]
"Repository" = "https://github.com/ika-rwth-aachen/docker-run"
"Bug Tracker" = "https://github.com/ika-rwth-aachen/docker-run/issues"

[tool.setuptools]
script-files = [
    "scripts/activate-python-docker-run-shell-completion",
    "scripts/docker-run",
]

[tool.setuptools.package-data]
docker_run = ["bash_completion.d/docker-run"]
