[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docker-run-docker-ros"
version = "1.0.8"
description = "docker-run plugin for Docker images built by docker-ros"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Lennart Reiher", email = "lennart.reiher@rwth-aachen.de"},
    {name = "Jean-Pierre Busch", email = "jean-pierre.busch@rwth-aachen.de"},
]
maintainers = [
    {name = "Lennart Reiher", email = "lennart.reiher@rwth-aachen.de"},
    {name = "Jean-Pierre Busch", email = "jean-pierre.busch@rwth-aachen.de"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["docker", "container", "ros"]
dependencies = ["docker-run-cli>=0.9.7"]
requires-python = ">=3.7"

[project.urls]
"Repository" = "https://github.com/ika-rwth-aachen/docker-run"
"Bug Tracker" = "https://github.com/ika-rwth-aachen/docker-run/issues"
